--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <!-- Link do CSS do Bootstrap (não remover)-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 
 <body>
+
   <header>
-    <div class="container-grid">
+    <div class="container-grid posicionamento-header">
       <a href="">
-        <img src="img/logo.png" alt="">
+        <img class="logo" src="img/logo.png" alt="">
       </a>
-      <nav class="menu">
+      <a href="#" onclick=mostrarMenu()>
+        <img class="barras" src="img/bars.svg" alt="">
+      </a>
+      <nav id="menu" class="menu">
         <a href="">Inicio</a>
         <a href="">Horários</a>
         <a href="">Campeonatos</a>
@@ -35,8 +41,43 @@
       </div>
     </div>
   </div>
+  <section class="secao-jogos">
+    <div class="jogos container">
+      <a href=""><img src="img/f1.png" alt="Logo da Formula 1"></a>
+      <a href=""><img src="img/lol.png" alt="Logo do League of Legends"></a>
+      <a href=""><img src="img/cs.png" alt="Logo do Counter Strike"></a>
+      <a href=""><img src="img/vava.png" alt="Logo do Valorant"></a>
+      <a href=""><img src="img/fifa.png" alt="Logo do Fifa"></a>
+    </div>
+  </section>
+  <section class="secao-sobre">
+    <div class="conteudo-sobre container">
+      <div class="row">
+        <div class="texto-sobre col">
+          <h2>Como participar das ligas</h2>
+          <p>Mussum Ipsum, cacilds vidis litro abertis. Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.Diuretics paradis num copo é motivis de denguis.Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!Mé faiz elementum girarzis, nisi eros vermeio.</p>
+        </div>
+        <div class="container-imagem col">
+          <img src="img/lolcamp.png" alt="Imagem do campeão do LOL">
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Link para o JS do Bootstrap (não remover) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script>
+    let menu = document.getElementById("menu")
 
+    function mostrarMenu() {
+      if (menu.style.display == "none") {
+        menu.style.display = "flex"
+      } else {
+        menu.style.display = "none"
+      }
+    }
+  </script>
 </body>
 
 </html>
